Made several styling updates to align DOM items correctly. Added wrappers in code for DOM manipulation where needed

--- a/style.css
+++ b/style.css
@@ -1,37 +1,59 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 #content {
     display: flex;
 }
 
 #sidebar {
     height: 100vh;
-    width: 10vw;
+    width: 20vw;
     border-right: solid;
-    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.todo-sidebar {
+#projects-list {
+    width: 20vw;
+    border-top: solid thin;
+    margin-top: 1rem;
     display: flex;
+    flex-direction: column;
+}
+
+.project-sidebar {
+    height: 2rem;
+    font-weight: bolder;
 }
 
 #project-full {
-    padding: 1rem;
-    width: 90vw;
+    padding: 1.5rem;
+    width: 80%;
 }
 
 #project-top-row {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#project-form {
-    z-index: 1;
-    display: flex;
-    justify-content: center;
+.todo {
+    border: solid thin;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
 }
 
 .todo-top-row {
     display: flex;
-    border: solid;
-    
+    justify-content: space-between;
+    align-items: center;
+}
+
+.todo-name-and-date {
+    display: flex;
 }
 
 .todo-details-hidden {
@@ -52,4 +74,30 @@
 
 .low-priority {
     background-color: green;
+}
+
+#project-form {
+    height: 30vh;
+    width: 30vw;
+    left: 35vw;
+    top: 30vh;
+    position: fixed;
+    z-index: 1;
+    border: solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#todo-form {
+    height: 50vh;
+    width: 40vw;
+    left: 35vw;
+    top: 30vh;
+    position: fixed;
+    z-index: 1;
+    border: solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
